platforms/browser/www/css/styles.css
/*
   statusbar-overlay sets the background color for the overlay. Black text is the default when the statusbar plugin is not added. When the
   statusbar plugin is added, it also adds default setting to make the content white via:

       <preference name="StatusBarStyle" value="lightcontent"/>

   Setting the background color to black will allow the default light content (white text/icons) to show on it. The statusbar plugin is included
   in the config.xml file and will be added by the CLI when you build locally.

   See https://github.com/apache/cordova-plugin-statusbar
*/

.statusbar-overlay {
    background: #000000;
}

#factory_brand {
  height:auto;
}

#factory_brand.list-block {
  margin:0px 0px;
}

.inlineBlock {
  display:inline-block !important;
}

#skiLookup , .skiLookupHomePageBtn, #registerBtn, .whiteTransBG {
  background-color: rgba(255, 255, 255, .4) !important;
}

#stockSkiListing_div.content-block-title {
  margin-top:11px;
}

#skiSelected {
  border: 1px solid #fff;
  border-radius: 0em;
  padding: .2em;
  background: #FFF;
  margin: .5em 0 0 0;
}

.head_setting_table {
  font-size: 1.2em;
  font-weight: bold;
  border-bottom: 1px solid #ddd;
  color: #000;
  padding: .5em 0em;
}

.data_setting_table {
  font-size: 1.2em;
  padding: .5em 0em;
}

.sm {
  font-size: .85em;
  padding: .25em 0em;
  color: rgba(0, 122, 255, 0.85);
}

.padding_top_5em {
  padding-top:.5em;
}

.padding_left_15px {
  padding-left: 15px;
}

.black1_1_heading {
  font-size: 1.1em;
  font-weight: bold;
  color: #000;
}

.stockListRow {
  padding: .25em 0;
}


#loginError {
    text-align: center;
    color: #F00;
}

.redText {
    color: #F00 !important;
}

.darkGrayText1_1em {
    color: #333 !important;
    font-size: 1.1em;
}

#ul_saved_list li {
  padding-left:12px;
}

.lightGreenBG {
  background-color: rgba(229,255,229,.8);
}

#getLocalSettings_div {
  display:none; /* don't show unless div has data */
}

.margin_1em_bottom {
  margin:0 0 1em 0;
}


.center {
  text-align: center;
}

.margin-left_1em {
  margin-left: 1em !important;
}

.margin-right_1em {
  margin-right: 1em !important;
}

.lightBlueBG {
background-color: rgba(33, 150, 243,.1);
}

.measure_table {
  font-size: 1.1em;
  padding: .2em 0em;
  border-bottom:1px solid #333;
  color:#333;
}

#loginForm .list-block {
    margin-bottom:15px;
}

#loginForm .list-block ul {
  background-color: rgba(255, 255, 255,.5);
}

.bold {
  font-weight: bold;
}

.size-20 { font-size: 20px !important}

.orange {color: rgba(255, 132, 0, .6);}

.top_padding_5 {
  padding: 0 0 .5em 0;
}

.picker-modal-inner .content-block {
  margin-top:17px;
}

#measure_picker {
  background-color: rgb(251, 240, 228);
  /*background-image: url(../img/water_bg.jpg);*/
}

#measure_picker .toolbar {
  background-color: rgba(255, 200, 143, 1);
}

.page {
  background-image: url(../img/water_bg.jpg) !important;
}

#loginPage {
  background-image: url(../img/homePageImg1_60_opacity.jpg) !important;
}

#viewHistoryDiv {
  margin-top: 1.2em !important;
}

.page-content {
  background-color: rgba(255,255,255,.3) !important;
}

#profilePage_div .item-media i {
 /*size-20 color-blue*/
  font-size: 20px;
  color:blue;
 }

 .page .content-block-title {
   font-weight: bold;
   font-size: 1.25em;
   margin-top:30px;
 }

.page .content-block-title .rightIcon {
  float: right;
  padding-bottom: .15em;
  font-weight: normal;
}

.page .content-block-title .rightText {
  float: right;
  font-weight: normal;
  font-size: initial;
}

.vertAlignMiddle {
  vertical-align: middle;
}








/* DATA TABLES */
.data-table {
  overflow-x: auto;
}

.data-table table {
    width: 100%;
    border: none;
    padding: 0;
    margin: 0;
    border-collapse: collapse;
    text-align: left;
}

.data-table thead {
    font-size: 12px;
    border-bottom: 1px solid #8e8e93;
}

thead {
    display: table-header-group;
    vertical-align: middle;
    border-color: inherit;
}



.data-table thead td:not(.sortable-active), .data-table thead th:not(.sortable-active) {
    color: #8e8e93;
}

.data-table th.numeric-cell {
    text-align: right;
}


.data-table td, .data-table th {
    padding: 0;
    position: relative;
    padding-left: 0px;
    padding-right: 15px;
    height: 2.0em;
}


.data-table td.numeric-cell, .data-table th.numeric-cell {
    text-align: right;
}


.notesPopUpHistory {
  color: #8e8e93;
  font-size: 12px;
  border-bottom: 1px solid #8e8e93;
  color: #8e8e93;
  font-weight: bold;
  margin: .8em 0 0 0;
}

.notesPopUpDetails {
  margin: 0 0 1.2em 0;
}

.closePopup {
  float: right;
  padding: 1em;
}

.smallText {
  font-size: .9em;
  padding-left: 1.2em;
}

/* ALTER SLIDER ON MY SETTINGS PAGE */
#settingsAdjuster .range-slider input[type=range] {
  background-size: 100% 9px !important;
  background: linear-gradient(to right,rgba(255, 132, 0, .6) 0,rgba(0, 122, 255, .6) 100%)!important;
  height:36px !important;
}

.stockText {
  color:#999;
  line-height: .9em;
  font-size: .95em;
}
.slideAdjust {
  display:none;
}

.createdDateText {
  font-size: .8em;
  font-weight: normal;
  color: #888;
  text-overflow: ellipsis;
  max-width: 40%;
  display: inline-block;
  overflow: hidden;
}

.lightOrangeBG {
  background-color: rgba(255, 132, 0, .2);
}

.floatLeft {
  float:left;
  margin-right: 1.0em;
}

.overFlowHidden {
  overflow: hidden;
  width: 95%;
}

.checkedRadio {
  font-weight: bold;
}

.measureOverlay {
  position: absolute;
  left: 0;
  right: 0;
  margin: auto auto auto .7em;
  font-size:.9em;
  color:#007aff;
  background-color: rgba(255, 255, 255, .7);
  display:table;
}

